# Lumina

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
include/lumina/: BitIO.hpp  Cli.hpp  Common.hpp  Crc32.hpp  Format.hpp  Huffman.hpp  Lzw.hpp
src/: BitIO.cpp  Cli.cpp  Crc32.cpp  Format.cpp  Huffman.cpp  Lzw.cpp  main.cpp
tests/: roundtrip_tests.cpp
